<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/background_color"

    android:layout_height="wrap_content">
    
    <LinearLayout
        android:id="@+id/etCommentPostTextPopup"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/_12sdp"
        android:orientation="horizontal"
        android:layout_weight="2"

        android:background="@drawable/edittext_shadow"
        android:textSize="@dimen/_16sdp" >
        
             <LinearLayout
                 android:layout_weight="0.9"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_margin="@dimen/_5sdp"
            android:layout_height="wrap_content">
            <TextView
              android:padding="@dimen/_5sdp"
                android:text="@string/category"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView

                android:text="@string/Title"
                android:padding="@dimen/_5sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/content_detail"
                android:padding="@dimen/_5sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/content_link"

                android:padding="@dimen/_5sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/email"
                android:padding="@dimen/_5sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

                 <TextView
                     android:text="@string/image"
                     android:padding="@dimen/_5sdp"
                     android:layout_marginLeft="@dimen/_10sdp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />

                 <TextView
                     android:text="@string/Video"
                     android:padding="@dimen/_5sdp"
                     android:layout_marginLeft="@dimen/_10sdp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />


                 <TextView
                     android:text="@string/Doc"
                     android:padding="@dimen/_5sdp"
                     android:layout_marginLeft="@dimen/_10sdp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />


             </LinearLayout>


        <LinearLayout
            android:layout_weight="0.5"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_margin="@dimen/_5sdp"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/dialog_auther_content_detail_category"
                android:padding="@dimen/_5sdp"
                android:text="@string/category"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:text="book"
                android:id="@+id/dialog_auther_content_title"
                android:padding="@dimen/_5sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:text="book"
                android:id="@+id/dialog_auther_content_detail"
                android:padding="@dimen/_5sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


            <TextView
                android:text="book"
                android:padding="@dimen/_5sdp"
                android:id="@+id/dialog_auther_content_link"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView

                android:textColor="@color/nliveo_indigo_colorPrimaryDark"
                android:padding="@dimen/_5sdp"
                android:maxLines="1"
                android:ellipsize="end"
                android:id="@+id/dialog_auther_content_email"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView

                android:padding="@dimen/_5sdp"
                android:maxLines="1"
                android:ellipsize="end"
                android:id="@+id/dialog_auther_content_detail_tv_image"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView

                android:padding="@dimen/_5sdp"
                android:maxLines="1"
                android:ellipsize="end"
                android:id="@+id/dialg_auther_content_detail_tv_video"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


            <TextView
                android:padding="@dimen/_5sdp"
                android:maxLines="1"
                android:ellipsize="end"
                android:id="@+id/dialog_auther_content_detail_tv_doc"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />





        </LinearLayout>


    </LinearLayout>
        
        


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/dialog_auther_content_detail_cancel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_margin="@dimen/_2sdp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:textColor="@color/bgcolor"
            android:layout_gravity="right"
            android:textSize="@dimen/_14sdp"
            android:text="@string/close"
            android:background="@drawable/btnpressed"/>

    </LinearLayout>
</LinearLayout>